--- a/packages/workflow/package.json
+++ b/packages/workflow/package.json
@@ -31,13 +31,14 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.28.2",
+    "@ethersproject/abi": "^5.8.0",
+    "@ethersproject/units": "^5.8.0",
     "@onflow/fcl": "^1.13.1",
     "@onflow/frw-cadence": "workspace:*",
     "@onflow/frw-context": "workspace:*",
     "@onflow/frw-utils": "workspace:*",
     "@onflow/transport-http": "^1.13.0",
     "@onflow/util-encode-key": "^1.2.4",
-    "ethers": "^6.15.0",
     "elliptic": "^6.5.7",
     "sha3": "^2.1.4"
   },
